[package]
name = "novel-api"
version = "0.10.7"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Terakomari <im.terakomari@icloud.com>"]
repository = "https://github.com/novel-rs/api"
homepage = "https://github.com/novel-rs/api"
documentation = "https://docs.rs/novel-api"
description = "Novel APIs from various sources"
readme = "README.md"
keywords = ["novel", "sfacg", "ciweimao", "ciyuanji"]
categories = ["command-line-utilities"]

[dependencies]
# https://github.com/dtolnay/thiserror
thiserror = { version = "1.0.60", default-features = false }
# https://github.com/serde-rs/serde
serde = { version = "1.0.201", default-features = false, features = [
  "std",
  "derive",
] }
# https://github.com/dtolnay/async-trait
async-trait = { version = "0.1.80", default-features = false }
# https://github.com/rust-lang/impl-trait-utils
trait-variant = { version = "0.1.2", default-features = false }
# https://github.com/tokio-rs/tokio
tokio = { version = "1.37.0", default-features = false, features = [
  "fs",
  "sync",
  # for connect_timeout
  "time",
  "rt-multi-thread",
] }
# https://github.com/matklad/once_cell
once_cell = { version = "1.19.0", default-features = false, features = ["std"] }
# https://github.com/rusticstuff/simdutf8
simdutf8 = { version = "0.1.4", default-features = false, features = [
  "std",
  "aarch64_neon",
] }
# https://github.com/serde-rs/json
serde_json = { version = "1.0.117", default-features = false, features = [
  "std",
] }
# https://github.com/causal-agent/scraper
scraper = { version = "0.19.0", default-features = false }
# https://github.com/uuid-rs/uuid
uuid = { version = "1.8.0", default-features = false, features = [
  "std",
  "v4",
  "fast-rng",
] }
# https://github.com/chronotope/chrono
chrono = { version = "0.4.38", default-features = false, features = [
  "std",
  "clock",
  "serde",
] }
# https://github.com/chronotope/chrono-tz
chrono-tz = { version = "0.9.0", default-features = false, features = ["std"] }
# https://github.com/tokio-rs/tracing
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
# https://github.com/Nugine/simd
hex-simd = { version = "0.8.0", default-features = false, features = [
  "std",
  "detect",
] }
# https://github.com/Nugine/simd
base64-simd = { version = "0.8.0", default-features = false, features = [
  "std",
  "detect",
] }
# https://github.com/RustCrypto/block-ciphers
aes = { version = "0.8.4", default-features = false }
# https://github.com/RustCrypto/block-ciphers
des = { version = "0.8.1", default-features = false }
# https://github.com/RustCrypto/block-modes
cbc = { version = "0.1.2", default-features = false, features = [
  "std",
  "block-padding",
] }
# https://github.com/magic-akari/ecb
ecb = { version = "0.1.2", default-features = false, features = [
  "std",
  "block-padding",
] }
# https://github.com/RustCrypto/hashes
md-5 = { version = "0.10.6", default-features = false, features = ["std"] }
# https://github.com/briansmith/ring
ring = { version = "0.17.8", default-features = false, features = ["alloc"] }
# https://github.com/dirs-dev/directories-rs
directories = { version = "5.0.1", default-features = false }
# https://github.com/pfernie/cookie_store
# pin for reqwest
cookie_store = { version = "=0.20", default-features = false }
# https://github.com/hyperium/http
http = { version = "1.1.0", default-features = false }
# https://github.com/servo/rust-url
url = { version = "2.5.0", default-features = false, features = ["serde"] }
# https://github.com/tokio-rs/bytes
bytes = { version = "1.6.0", default-features = false, features = ["std"] }
# https://github.com/seanmonstar/reqwest
reqwest = { version = "0.12.4", default-features = false, features = [
  "http2",
  "rustls-tls",
  "cookies",
  "gzip",
  "json",
  "hickory-dns",
  "macos-system-configuration",
] }
# https://github.com/tokio-rs/axum
axum = { version = "0.7.5", default-features = false, features = [
  "http1",
  "tokio",
] }
# https://github.com/djc/askama
askama = { version = "0.12.1", default-features = false, features = [
  "with-axum",
] }
# https://github.com/djc/askama
askama_axum = { version = "0.4.0", default-features = false }
# https://github.com/pyrossh/rust-embed
rust-embed = { version = "8.4.0", default-features = false }
# https://github.com/abonander/mime_guess
mime_guess = { version = "2.0.4", default-features = false, features = [
  "rev-mappings",
] }
# https://github.com/image-rs/image
image = { version = "0.25.1", default-features = false, features = [
  "png",
  "jpeg",
  "webp",
  "rayon",
] }
# https://github.com/jaredforth/webp
webp = { version = "0.3.0", default-features = false, features = ["img"] }
# https://github.com/Nemo157/async-compression
async-compression = { version = "0.4.10", default-features = false, features = [
  "tokio",
  "zstdmt",
] }
# https://github.com/SeaQL/sea-orm
sea-orm = { version = "0.12.15", default-features = false, features = [
  "with-chrono",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
] }
# https://github.com/SeaQL/sea-orm
sea-orm-migration = { version = "0.12.15", default-features = false, features = [
  "with-chrono",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
] }
# https://github.com/toml-rs/toml
toml = { version = "0.8.12", default-features = false, features = [
  "parse",
  "display",
] }
# https://github.com/hwchen/keyring-rs
keyring = { version = "2.3.3", default-features = false, features = [
  "platform-macos",
  "platform-windows",
  "linux-no-secret-service",
] }
# https://github.com/Hanaasagi/machine-uid
machine-uid = { version = "0.5.1", default-features = false }
# https://github.com/Byron/open-rs
open = { version = "5.1.2", default-features = false }
# https://github.com/Dentosal/portpicker-rs
portpicker = { version = "0.1.1", default-features = false }
# https://github.com/RustCrypto/utils
zeroize = { version = "1.7.0", default-features = false, features = [
  "alloc",
  "derive",
  "aarch64",
] }
# https://github.com/console-rs/dialoguer
dialoguer = { version = "0.11.0", default-features = false, features = [
  "password",
] }
# https://github.com/jonasbb/serde_with
serde_with = { version = "3.8.1", default-features = false, features = [
  "std",
  "macros",
] }
# https://github.com/rust-itertools/itertools
itertools = { version = "0.12.1", default-features = false, features = [
  "use_std",
] }
# https://github.com/rust-lang/hashbrown
hashbrown = { version = "0.14.5", default-features = false, features = [
  "ahash",
  "inline-more",
] }
# https://github.com/zkat/is_ci
is_ci = { version = "1.2.0", default-features = false }

[dev-dependencies]
# https://github.com/dtolnay/anyhow
anyhow = { version = "1.0.83", default-features = false, features = ["std"] }
# https://github.com/rust-pretty-assertions/rust-pretty-assertions
pretty_assertions = { version = "1.4.0", default-features = false, features = [
  "std",
] }
# https://github.com/tokio-rs/tokio
tokio = { version = "1.37.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
# https://github.com/Stebalien/tempfile
tempfile = { version = "3.10.1", default-features = false }
